--- a/templates/confirm_registration.html
+++ b/templates/confirm_registration.html
@@ -27,9 +27,9 @@
                 <div class="row flex-grow">
                     <div class="col-lg-4 mx-auto">
                         <div class="auth-form-light text-left p-5">
-                            <div class="brand-logo">
+                            <!--<div class="brand-logo">
                                 <img src="static/login_assets/images/logo.svg">
-                            </div>
+                            </div>-->
                             <h4>Registration is successful :)</h4>
                             <a href="/login" class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn">SIGN
                 IN</a>
