--- a/templates/signup.html
+++ b/templates/signup.html
@@ -27,10 +27,10 @@
                 <div class="row flex-grow">
                     <div class="col-lg-4 mx-auto">
                         <div class="auth-form-light text-left p-5">
-                            <div class="brand-logo">
+                            <!--<div class="brand-logo">
                                 <img src="static/login_assets/images/logo.svg">
-                            </div>
-                            <h4>New here?</h4>
+                            </div>-->
+                            <h4>Q-Lines dashboard</h4>
                             <h6 class="font-weight-light">{{message}}</h6>
                             <form class="pt-3" method="post">
 
