--- a/templates/dashboard_home.html
+++ b/templates/dashboard_home.html
@@ -5,6 +5,9 @@
         top: 6px;
         width: 90px;
     }
+    content {
+        background-color: #ff6347
+    }
 </style>
 
 <div id="content" style="width:100%">
@@ -12,13 +15,15 @@
         <div class="container-fluid">
 
             <div class="navbar-header">
+
                 <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
-          <i class="glyphicon glyphicon-align-left"></i>
-          <span></span>
-        </button>
+                    <i class="glyphicon glyphicon-align-left"></i>
+                    <span></span>
+                </button>
+
                 <button type="button" class="btn btn-info logout-nav" onclick="window.location.href='/logout'">
-          Log out
-        </button>
+                    Log out
+                </button>
             </div>
 
         </div>
@@ -27,33 +32,31 @@
 
     <div>
         <div class="row">
-
             <div class="col-sm-3">
-                <input class="form-control" type="text" placeholder="Search in Bio" id="search_keyword">
+                <input class="form-control" type="text" placeholder="Search the dashboard" id="search_keyword"></div>
+                <div class="col-sm-5">
+                    <button type="button" class="btn" onclick="loadDoc()">Search</button>
+                </div>
             </div>
-            <div class="col-sm-5">
-                <button type="button" class="btn" onclick="loadDoc()">Search</button>
-            </div>
+
+            <div id="flaskres"></div>
         </div>
 
-        <div id="flaskres">
+
+        <div class="w-25 p-3" style="background-color: #eee;">Width 25%</div>
+        <div class="w-50 p-3" style="background-color: #eee;">Width 50%</div>
+        <div class="w-75 p-3" style="background-color: #eee;">Width 75%</div>
+        <div class="w-100 p-3" style="background-color: #eee;">Width 100%</div>
+
+
+        <div style="height: 100px; background-color: rgba(255,0,0,0.1);">
+            <div class="h-25 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 25%</div>
+            <div class="h-50 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 50%</div>
+            <div class="h-75 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 75%</div>
+            <div class="h-100 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 100%</div>
         </div>
+
 
     </div>
 
-    <div>
-        <div class="row">
-
-            <div class="col-sm-3">
-                <input class="form-control" type="text" placeholder="Search in Bio" id="search_keyword">
-            </div>
-            <div class="col-sm-5">
-                <button type="button" class="btn" onclick="loadDoc()">Search</button>
-            </div>
-        </div>
-
-        <div id="flaskres">
-        </div>
-
-    </div>
 </div>
