--- a/templates/nav.html
+++ b/templates/nav.html
@@ -18,7 +18,7 @@
                         <li><a href="/">Home</a></li>
                         <li><a href="products">Products</a></li>
                         <li><a href="pricing">Pricing</a></li>
-			<!-- <li><a href="dashboard">Dashboard</a></li> -->
+			            <li><a href="dashboard">Dashboard</a></li>
                         <li><a href="contact">Contact</a></li>
 
                     </ul>
