--- a/templates/test_mychart.html
+++ b/templates/test_mychart.html
@@ -1,167 +1,173 @@
 <script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/modules/series-label.js"></script>
-<script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script src="https://code.highcharts.com/modules/export-data.js"></script>
-<script src="https://code.highcharts.com/modules/accessibility.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-
 <figure class="highcharts-figure">
     <div id="container3"></div>
-    <p class="highcharts-description">
-        Basic line chart showing trends in a dataset. This chart includes the
-        <code>series-label</code> module, which adds a label to each line for
-        enhanced readability.
-    </p>
 </figure>
-<!--
-<style>
-    .highcharts-figure,
-    .highcharts-data-table table {
-        min-width: 360px;
-        max-width: 800px;
-        margin: 1em auto;
-    }
 
-    .highcharts-data-table table {
-        font-family: Verdana, sans-serif;
-        border-collapse: collapse;
-        border: 1px solid #ebebeb;
-        margin: 10px auto;
-        text-align: center;
-        width: 100%;
-        max-width: 500px;
-    }
-
-    .highcharts-data-table caption {
-        padding: 1em 0;
-        font-size: 1.2em;
-        color: #555;
-    }
-
-    .highcharts-data-table th {
-        font-weight: 600;
-        padding: 0.5em;
-    }
-
-    .highcharts-data-table td,
-    .highcharts-data-table th,
-    .highcharts-data-table caption {
-        padding: 0.5em;
-    }
-
-    .highcharts-data-table thead tr,
-    .highcharts-data-table tr:nth-child(even) {
-        background: #f8f8f8;
-    }
-
-    .highcharts-data-table tr:hover {
-        background: #f1f7ff;
-    }
-</style>
-
--->
 <script>
 
-    var chartdata = []
 
-
-
-
-    function processData(data) {
-        chartdata = data.res.data
+    var chartdata = [];
+    var chartname = '';
+    function processData(data_received) {
+        var data = data_received.data;
+        for (var i = 0; i < data.length; i++) {
+            chartdata.push([
+                Date.parse(data[i][1]), data[i][2]
+            ])
+        }
+        chartname = data_received.name;
+        //console.log('going to feed to charts: ', chartdata)
     };
 
 
-
-
-
-
     function plotCharts() {
-
         Highcharts.chart('container3', {
+
             chart: {
                 events: {
                     load: function () {
-        
+
                         // set up the updating of the chart each second
                         var series = this.series[0];
                         setInterval(function () {
                             var x = (new Date()).getTime(), // current time
                                 y = Math.round(Math.random() * 100);
-                            series.addPoint([x, y], true, true);
-                        }, 1000);
+
+
+                            fetch_newdata3(series);
+
+                            //console.log('new_data: ', new_data.data);
+                            //console.log('y: ', new_data[2]);
+
+                            //series.addPoint([new_data[0], new_data[1]], true, true);
+                            //console.log('series: ', series);
+                        }, 500);
                     }
                 }
             },
-            title: {
-                text: 'U.S Solar Employment Growth by Job Category, 2010-2020'
-            },
 
-            subtitle: {
-                text: 'Source: <a href="https://irecusa.org/programs/solar-jobs-census/" target="_blank">IREC</a>'
-            },
-
-            yAxis: {
-                title: {
-                    text: 'Number of Employees'
-                }
+            time: {
+                useUTC: false
             },
 
             xAxis: {
-                accessibility: {
-                    rangeDescription: 'Range: 2010 to 2020'
+                type: 'datetime',
+                dateTimeLabelFormats: {
+                    minute: '%H:%M',
+                    hour: '%H:%M',
+                    day: '%e. %b',
+                    week: '%e. %b',
+                    month: '%b \'%y',
+                    year: '%Y'
                 }
             },
 
-            legend: {
-                layout: 'vertical',
-                align: 'right',
-                verticalAlign: 'middle'
-            },
-
-            plotOptions: {
-                series: {
-                    label: {
-                        connectorAllowed: false
-                    },
-                    pointStart: 2010
-                }
-            },
 
             series: [{
-                name: 'CPU Usage',
+                name: chartname,
                 data: chartdata
-            }],
-
-            responsive: {
-                rules: [{
-                    condition: {
-                        maxWidth: 500
-                    },
-                    chartOptions: {
-                        legend: {
-                            layout: 'horizontal',
-                            align: 'center',
-                            verticalAlign: 'bottom'
-                        }
-                    }
-                }]
-            }
-
+            }]
         });
+    };
+
+
+    function fetchdata() {
+        request_params = {
+            client_name: 'cpe1',
+            param_name: 'param1',
+            table_name: 'table1',
+            ts_start: '',
+            ts_end: '',
+        };
+
+        $.getJSON('/fetchdata', request_params, function (data_received) {
+            //console.log('received from be', data_received);
+            processData(data_received);
+            plotCharts();
+        });
+    };
+
+
+
+    function fetch_newdata() {
+        var value = $.ajax({
+            url: '/fetchdata',
+            data: {
+                client_name: 'cpe1',
+                param_name: 'param1',
+                table_name: 'table1',
+                single_data: true,
+                ts_start: '',
+                ts_end: '',
+            },
+            async: false
+        }).responseText;
+
+        //console.log('# ajax res: ', value.data)
+        return value;
+    }
+
+
+    function fetch_newdata2() {
+        var value = $.ajax({
+            url: '/fetchdata',
+            data: {
+                client_name: 'cpe1',
+                param_name: 'param1',
+                table_name: 'table1',
+                single_data: true,
+                ts_start: '',
+                ts_end: '',
+            },
+            async: false
+        }).responseText;
+
+        //console.log('# ajax res: ', value.data)
+        return value;
     }
 
 
 
+    function fetch_newdata3(series) {
+        $.ajax({
+            url: "/fetchdata",
+            data: {
+                client_name: 'cpe1',
+                param_name: 'param1',
+                table_name: 'table1',
+                single_data: true,
+                ts_start: '',
+                ts_end: '',
+            },
+            dataType: 'json',
+            success: function (response) {
+                //temp = parseFloat(((raw.main.temp) - 273.15).toPrecision(4))
+                date = Date.now()
+                //data_.push([date, temp])
+                //response=JSON.parse(response);
+                console.log('response is: ', response.data)
+                //var datax = response.data;
+                x = Date.parse(response.data[0][1])
+                y = response.data[0][2]
+                console.log('data member is: ', response.data[0][2])
+
+                //plot_chart()
+                var index = series.xData.indexOf(x)
+                console.log('# index',index)
+                if (y != null && index == -1){
+                    series.addPoint([x, y], true, true);
+                }
+            }
+        })
+    };
+
+
     $(document).ready(function () {
-        $.getJSON('/fetchdata', function (data) {
-            processData(data);
-            plotCharts();
-        });
+        fetchdata();
+        //setInterval(function() { plotCharts() }, 2000);
     });
-
-
 
 </script>
